--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "core-js": "^3.8.3",
-    "quasar": "^2.16.0",
-    "vue": "^3.2.13"
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@quasar/extras": "^1.17.0",
+    "axios": "^1.10.0",
+    "core-js": "^3.44.0",
+    "pinia": "^3.0.3",
+    "quasar": "^2.18.1",
+    "vue": "^3.5.17",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "postcss-rtlcss": "^5.4.0",
-    "sass": "^1.78.0",
-    "sass-loader": "^14.2.1",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.5.17",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@babel/eslint-parser": "^7.23.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.21.1",
+    "prettier": "^3.2.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "vue-cli-plugin-quasar": "^5.1.2"
   },
   "eslintConfig": {
